--- a/.gitignore
+++ b/.gitignore
@@ -55,7 +55,7 @@ MANIFEST
 pip-log.txt
 pip-delete-this-directory.txt
 
-# Unit test / coverage reports
+# Unit my_test / coverage reports
 htmlcov/
 .tox/
 .nox/
@@ -178,4 +178,4 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-./test/
+my_test/
